# remove-arabic-diacritics-by-haskell

./: .gitignore  Makefile  README.md  arabic-diacritic-removal.cabal  lettercase.cabal
src/: ArabicDiacriticRemoval.hs  Lower.hs  Main.hs
test/: ArabicDiacriticRemovalTests.hs  LittleTest.hs  LowerTests.hs  Test.hs
