name:                lettercase
version:             0.1.0.0
-- synopsis:
description: A way to convert to lowercase or uppercase using the command line.
homepage:            
license:             BSD3
-- license-file:        LICENSE
author:              Elsanussi Mneina
maintainer:          elsanussi.m@outlook.com
copyright:           2020 Elsanussi Mneina
category:            text processing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


executable lettercase
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Lower

test-suite lettercase-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test, src
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 5
  other-modules:       Lower, LowerTests, LittleTest
